--- a/Gymnasium.Domain/Gymnasium.Domain.csproj
+++ b/Gymnasium.Domain/Gymnasium.Domain.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LærerManager.cs" />
+    <Compile Include="ElevManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
