--- a/Gymnasium.DTO/Gymnasium.DTO.csproj
+++ b/Gymnasium.DTO/Gymnasium.DTO.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ElevDTO.cs" />
+    <Compile Include="FagDTO.cs" />
     <Compile Include="LærerDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
