--- a/Gymnasium.Web/Web.config
+++ b/Gymnasium.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GymnasiumDbEntities" connectionString="metadata=res://*/GymnasiumEntities.csdl|res://*/GymnasiumEntities.ssdl|res://*/GymnasiumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=C:\PROJECT\Gymnasium\Gymnasium.Web\App_Data\GymnasiumDb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GymnasiumDbEntities" connectionString="metadata=res://*/GymnasiumEntities.csdl|res://*/GymnasiumEntities.ssdl|res://*/GymnasiumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DATADIRECTORY|\GymnasiumDb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
