--- a/Gymnasium.Persistence/Gymnasium.Persistence.csproj
+++ b/Gymnasium.Persistence/Gymnasium.Persistence.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>GymnasiumEntities.edmx</DependentUpon>
       <LastGenOutput>GymnasiumEntities.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="GymnasiumEntities.edmx.sql" />
     <Content Include="GymnasiumEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>GymnasiumEntities.edmx</DependentUpon>
