--- a/Gymnasium.Web/Gymnasium.Web.csproj
+++ b/Gymnasium.Web/Gymnasium.Web.csproj
@@ -106,6 +106,7 @@
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <Content Include="slettedeEleverListe.aspx" />
     <Content Include="slettedeFagListe.aspx" />
     <Content Include="slettedeLærerListe.aspx" />
     <Content Include="Web.config" />
@@ -166,6 +167,13 @@
       <DependentUpon>NytFag.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="slettedeEleverListe.aspx.cs">
+      <DependentUpon>slettedeEleverListe.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="slettedeEleverListe.aspx.designer.cs">
+      <DependentUpon>slettedeEleverListe.aspx</DependentUpon>
+    </Compile>
     <Compile Include="slettedeFagListe.aspx.cs">
       <DependentUpon>slettedeFagListe.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
