--- a/Gymnasium.Web/packages.config
+++ b/Gymnasium.Web/packages.config
@@ -3,4 +3,5 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
 </packages>
